Safari on iOS responsiveness bug fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -191,6 +191,17 @@ hr{
   letter-spacing: -.05rem;
 }
 
+ .featurette-image {
+  margin-top: −120px; /* Vertically center image with the text */
+}
+
+ .featurette-image.pull-left {
+  margin-right: 40px;
+}
+ .featurette-image.pull-right {
+  margin-left: 40px;
+}
+
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
